# codewars

./: .gitignore  CMakeLists.txt  anagram-detection.c  beeramid.cpp  convert-string-to-camel-case.cpp  counting-change-combinations.cpp  detect-pangram.c  find-missing-letter.cpp  find-stray-number.c  multiplication_table.cpp  number-of-trailing-zero-of-n.py  regex-pin-validation.c  roman-numerals-decoder.cpp  simple-pig-latin.cpp  snail-pattern.cpp  square-every-digit.c  sumofnumbers.c  the-vowel-code.cpp
