cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 17)
add_executable(roman-numerals-decoder roman-numerals-decoder.cpp)
add_executable(the-vowel-code the-vowel-code.cpp)
add_executable(sumofnumbers sumofnumbers.c)
add_executable(find-missing-letter find-missing-letter.cpp)
add_executable(snail-pattern snail-pattern.cpp)
add_executable(counting-change-combinations counting-change-combinations.cpp)
add_executable(multiplication_table multiplication_table.cpp)
add_executable(convert-string-to-camel-case convert-string-to-camel-case.cpp)
add_executable(simple-pig-latin simple-pig-latin.cpp)
add_executable(square-every-digit square-every-digit.c)
add_executable(anagram-detection anagram-detection.c)
add_executable(detect-pangram detect-pangram.c)
add_executable(find-stray-number find-stray-number.c)
add_executable(regex-pin-validation regex-pin-validation.c)
